# docs/swagger.json
@@ -30,6 +30,17 @@
                     "books"
                 ],
                 "summary": "Create a new book",
+                "parameters": [
+                    {
+                        "description": "New Book",
+                        "name": "Book",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -112,6 +123,17 @@
                     "books"
                 ],
                 "summary": "Update book",
+                "parameters": [
+                    {
+                        "description": "Update Book",
+                        "name": "Book",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {}
             }
         }
